fixing translation mobile dekstop and vice versa

--- a/css/style-common.css
+++ b/css/style-common.css
@@ -1,12 +1,8 @@
 html{
 	margin: 0px;
-	height: 100%;
-	width: 100%;
 }
 body{
 	margin: 0px;
-	min-height: 100%;
-	width: 100%;
 	background-color: orange;
 }
 
